# homfa-experiment

./: .gitignore  .gitmodules  README.md  adult#001-dt-30.csv  adult-001-bg-true.in  adult-001-bg.in  adult-001-dbg-true.in  adult-001-dbg.in  adult-001-dt-30-eval.csv  ap-list  bench.sh  damon-002.spec  damon-004.spec  summarize-benchmark-result.sh  symglucose_csv_to_01.rb  test-damon-005-false.in  test-damon-005-true.in  test-towards-002-true.in  test-towards-004-false.in  test-towards-005-false.in  test-towards-006-true.in  test.sh  towards-001.spec  towards-002.spec  towards-005.spec
Xbenchmark/: 10000_5ap.in  X10_5ap.spec  X8_5ap.spec  X9_5ap.spec  bench.sh
ap5/: 01tobin.rb  adult#001.csv  adult-001-dt-30-dbg.in  adult-001-dt-30-train.csv  adult-001-eval.csv  damon-001-rev.spec  damon-001.spec  damon-002-rev.spec  damon-002.spec  damon-004-rev.spec  damon-004.spec  damon-005-rev.spec  damon-005.spec  gen_damon_specs.sh  gen_damon_tests.sh  gen_test_damon-001.rb  gen_test_damon-002.rb  gen_test_damon-004.rb  gen_test_damon-005.rb  symglucose_csv_cgm_dt.csv  symglucose_csv_damon_params.rb  symglucose_csv_split_2.rb  symglucose_gen_test_csv_damon-004.rb  symglucose_gen_test_csv_damon-005.rb  symglucose_gen_test_csv_towards-001.rb  symglucose_gen_test_csv_towards-004.rb  symglucose_gen_test_csv_towards-005.rb  symglucose_gen_test_csv_towards-006.rb  test-damon-001-false.in  test-damon-002-false.in  test-damon-002-true.in  test-damon-004-false.in  test-damon-004-true.in  test-damon-005-false.in  (+9 more)
trgsw-enc-dec/: .gitignore  CMakeLists.txt  main.cpp  proc.cpp
(+102 files in other folders)
